[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/escolhadojogo.gd" type="Script" id=1]
[ext_resource path="res://img/menu_itens/escolha seu jogo.png" type="Texture" id=2]
[ext_resource path="res://img/menu_itens/123_normal.png" type="Texture" id=3]
[ext_resource path="res://img/menu_itens/123_laranja.png" type="Texture" id=4]
[ext_resource path="res://img/menu_itens/123_azul.png" type="Texture" id=5]
[ext_resource path="res://img/menu_itens/abc.png" type="Texture" id=6]
[ext_resource path="res://img/menu_itens/abc_laranja.png" type="Texture" id=7]
[ext_resource path="res://img/menu_itens/abc_azul.png" type="Texture" id=8]
[ext_resource path="res://img/menu_itens/voltar_normal.png" type="Texture" id=9]
[ext_resource path="res://img/menu_itens/voltar_laranja.png" type="Texture" id=10]
[ext_resource path="res://img/menu_itens/voltar_azul.png" type="Texture" id=11]

[node name="escolhadeJogo" type="EventPlayer"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/pitch_scale = 1.0
stream/tempo_scale = 1.0
stream/autoplay = false
stream/paused = false
script/script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="TextureFrame" type="TextureFrame" parent="ParallaxBackground/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1026.0
margin/bottom = 614.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="123" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 340.0
margin/top = 310.0
margin/right = 620.0
margin/bottom = 440.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="abc" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 335.0
margin/top = 167.0
margin/right = 615.0
margin/bottom = 297.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="voltar" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 396.0
margin/top = 491.0
margin/right = 588.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/hover = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="123" to="." method="_on_123_pressed"]

[connection signal="pressed" from="abc" to="." method="_on_abc_pressed"]

[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]


